--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,40 @@ footer .btn:hover {
 .btn__edit {
     border: 1px solid #ffffff;
 }
+.carousel-inner {
+    overflow: visible;
+}
 .carousel-control-prev, .carousel-control-next {
     width: 20px;
 }
 .carousel-control-prev {
     display: none;
+}
+.img-container {
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.5s;
+}
+.card {
+    background-color: #000000;
+    color: #ffffff;
+    transition: transform 0.5s, opacity 0.5s, height 0.5s ease-in-out; 
+    opacity: 0; 
+    height: 0;
+    position: absolute;
+    top: 100%;
+    box-sizing: border-box;
+    
+   
+}
+.img-container:hover {
+  transform: scale(1.05);
+}
+.img-container:hover + .card, .card:hover {
+    opacity: 1; 
+    height: auto;
+   width: inherit;
+   z-index: 1;
+   
+   
 }
